--- a/src/Components/Button/Products/products.scss
+++ b/src/Components/Button/Products/products.scss
@@ -1,18 +1,22 @@
 
 #product-container { 
     display: flex; 
+    justify-content: center;
     width: 100%; 
     height: 100vh; 
+    flex-wrap: wrap;
     #product-item { 
         display: flex;
+        position: relative;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
         border-radius: 5%;
         margin: 5px; 
         max-width: 300px; 
-        max-height: 450px; 
+        min-width: 300px; 
+        max-height: 450px;
+        min-height: 450px; 
         background: rgb(109,117,111);
         background: linear-gradient(315deg, rgba(109,117,111,1) 0%, rgba(12,13,12,1) 35%, rgba(23,23,22,1) 100%); 
         color: white; 
@@ -21,10 +25,21 @@
             max-width: 80%;
             margin-bottom: 20px; 
             border: 2px solid white; 
-            box-shadow: rgba(241, 240, 240, 0.65) 0px 15px 25px, rgba(238, 236, 236, 0.5) 0px 5px 10px;
+            box-shadow: rgb(146, 148, 149) 0px 20px 30px -10px;
         }
         h3 { 
             font-size: 25px;
+        }
+        #product-shopping-card-icon { 
+            position: absolute;
+            right: 20px; 
+            bottom: 20px; 
+            &:hover { 
+                cursor: pointer;
+                color: rgb(147, 236, 147); 
+                transform: scale(1.1);
+                transition: .4s ease-in-out;
+            }
         }
     }
 }
