--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@500&display=swap');
+
 * { 
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     box-sizing: border-box;
     padding: 0; 
     margin: 0;
+}
+
+body { 
+    background-color: rgb(28, 29, 28);
 }
