--- a/src/Components/Products/products.scss
+++ b/src/Components/Products/products.scss
@@ -28,7 +28,8 @@
             box-shadow: rgb(146, 148, 149) 0px 20px 30px -10px;
         }
         h3 { 
-            font-size: 25px;
+            font-size: 20px;
+            margin-bottom: 10px; 
         }
         #product-shopping-card-icon { 
             position: absolute;
