--- a/src/Components/Navigation/navbar.scss
+++ b/src/Components/Navigation/navbar.scss
@@ -1,3 +1,5 @@
+$accentColor: rgb(145, 216, 145); 
+
 
 #navbar-wrapper { 
     display: flex;
@@ -28,6 +30,7 @@
     }
     
     #navbar-link-container { 
+        position: relative;
         display: flex;
         align-items: center;
         margin-right: 40px;
@@ -37,18 +40,33 @@
             &:hover { 
                 color: rgb(145, 216, 145); 
                 cursor: pointer;
-                border-bottom: 2px solid rgb(145, 216, 145); 
+                border-bottom: 2px solid $accentColor;
                 transition: .4s ease-in-out; 
             }
         }
-        #navbar-checkout-card { 
+        #navbar-checkout-cart { 
             margin: 10px;
             &:hover { 
-                color: rgb(145, 216, 145); 
+                color: $accentColor;
                 cursor: pointer;
                 transform: scale(1.10); 
                 transition: .4s ease-in-out; 
             }
+        }
+        #navbar-checkout-cart-amount-view { 
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center; 
+            width: 25px;
+            height: 25px; 
+            right: -10px;
+            top: -10px;
+            color: black; 
+            font-weight: 800;
+            font-size: 14px; 
+            border-radius: 40%; 
+            background-color: $accentColor; 
         }
     }
 }
