--- a/src/Components/Cart/cart.css
+++ b/src/Components/Cart/cart.css
@@ -1,13 +1,103 @@
-#cart-product-container {
+#cart-checkout-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 100vh;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+}
+
+#cart-checkout-container .cart-checkout-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 80%;
+  height: 60%;
+  max-width: 800px;
+  padding: 10px;
+  border: 2px solid white;
+  border-radius: 16px;
+  color: white;
+  overflow-y: auto;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(109, 117, 111, 0.8)), color-stop(20%, #0c0d0c), to(#171716));
+  background: linear-gradient(0deg, rgba(109, 117, 111, 0.8) 0%, #0c0d0c 20%, #171716 100%);
+}
+
+#cart-checkout-container .cart-checkout-box #cart-empty-back-link {
+  width: 100%;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+}
+
+#cart-checkout-container .cart-checkout-box #cart-empty-back-link:hover {
+  color: #7ed3e2;
+}
+
+#cart-checkout-container .cart-checkout-box #cart-checkout-subtotal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 20px;
+}
+
+#cart-checkout-container .cart-checkout-box #cart-checkout-subtotal #cart-checkout-subtotal-price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+#cart-checkout-container .cart-checkout-box #cart-checkout-subtotal #cart-checkout-subtotal-price h3 {
+  margin-right: 15px;
+}
+
+#cart-checkout-container .cart-checkout-box .cart-button {
+  padding: 10px;
+  width: 150px;
+  font-weight: 600;
+  border: none;
+}
+
+#cart-checkout-container .cart-checkout-box .cart-button:hover {
+  cursor: pointer;
+}
+
+#cart-checkout-container .cart-checkout-box #cart-empty-cart-button {
+  background-color: #ee965c;
+}
+
+#cart-checkout-container .cart-checkout-box #cart-empty-cart-button:hover {
+  background-color: #f8dbb9;
+}
+
+#cart-checkout-container .cart-checkout-box #cart-checkout-button {
+  background-color: #7ed3e2;
+  margin-left: 5px;
+}
+
+#cart-checkout-container .cart-checkout-box #cart-checkout-button:hover {
+  background-color: #afdde6;
 }
 /*# sourceMappingURL=cart.css.map */
