--- a/src/Components/Cart/cart.scss
+++ b/src/Components/Cart/cart.scss
@@ -1,7 +1,68 @@
-#cart-product-container { 
+@import "../../colorscheme"; 
+
+#cart-checkout-container { 
     display: flex; 
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100%; 
     height: 100vh; 
-    flex-wrap: wrap;
+
+    .cart-checkout-box { 
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 80%; 
+        height: 60%; 
+        max-width: 800px; 
+        padding: 10px; 
+        border: 2px solid white; 
+        border-radius: 16px;
+        color: white; 
+        overflow-y: auto;
+        background: linear-gradient(0deg, rgba(109,117,111,0.8) 0%, rgba(12,13,12,1) 20%, rgba(23,23,22,1) 100%); 
+        #cart-empty-back-link { 
+            width: 100%; 
+            text-align: center;
+            text-decoration: none;
+            color: white; 
+            &:hover { 
+                color: $checkoutButtonColor; 
+            }
+        }
+        #cart-checkout-subtotal { 
+            display: flex;
+            justify-content: space-between; 
+            margin: 20px; 
+            #cart-checkout-subtotal-price { 
+                display: flex;
+                align-items: flex-end;
+                h3 { 
+                    margin-right: 15px; 
+                }
+            }
+        }
+        .cart-button { 
+            padding: 10px; 
+            width: 150px; 
+            font-weight: 600;
+            border: none; 
+            &:hover { 
+                cursor: pointer;
+            }
+        }
+        #cart-empty-cart-button { 
+            background-color: $emptyCartButtonColor;
+            &:hover { 
+                background-color: $emptyCartButtonColorHover;
+            }
+        }
+        #cart-checkout-button { 
+            background-color: $checkoutButtonColor;
+            margin-left: 5px; 
+            &:hover { 
+                background-color: $checkoutButtonColorHover;
+            }
+        }
+    }
 }
