--- a/src/Components/Navigation/navbar.css
+++ b/src/Components/Navigation/navbar.css
@@ -22,6 +22,8 @@
   display: -ms-flexbox;
   display: flex;
   margin-left: 15px;
+  color: white;
+  text-decoration: none;
 }
 
 #navbar-wrapper #navbar-home-container h1 {
@@ -56,6 +58,8 @@
 #navbar-wrapper #navbar-link-container a {
   margin: 10px;
   font-size: 18px;
+  color: white;
+  text-decoration: none;
 }
 
 #navbar-wrapper #navbar-link-container a:hover {
@@ -92,12 +96,12 @@
           align-items: center;
   width: 25px;
   height: 25px;
-  right: -10px;
-  top: -10px;
+  right: -2px;
+  top: 2px;
   color: black;
   font-weight: 800;
   font-size: 14px;
-  border-radius: 40%;
+  border-radius: 50%;
   background-color: #91d891;
 }
 /*# sourceMappingURL=navbar.css.map */
