--- a/src/Components/Navigation/navbar.scss
+++ b/src/Components/Navigation/navbar.scss
@@ -1,5 +1,4 @@
-$accentColor: rgb(145, 216, 145); 
-
+@import "../../colorscheme";
 
 #navbar-wrapper { 
     display: flex;
@@ -15,6 +14,8 @@ $accentColor: rgb(145, 216, 145);
     #navbar-home-container { 
         display: flex;
         margin-left: 15px; 
+        color: white; 
+        text-decoration: none;
         h1 { 
             margin-left: 5px; 
         }
@@ -37,8 +38,10 @@ $accentColor: rgb(145, 216, 145);
         a { 
             margin: 10px;
             font-size: 18px;
+            color: white; 
+            text-decoration: none;
             &:hover { 
-                color: rgb(145, 216, 145); 
+                color: $accentColor; 
                 cursor: pointer;
                 border-bottom: 2px solid $accentColor;
                 transition: .4s ease-in-out; 
@@ -60,12 +63,12 @@ $accentColor: rgb(145, 216, 145);
             align-items: center; 
             width: 25px;
             height: 25px; 
-            right: -10px;
-            top: -10px;
+            right: -2px;
+            top: 2px;
             color: black; 
             font-weight: 800;
             font-size: 14px; 
-            border-radius: 40%; 
+            border-radius: 50%; 
             background-color: $accentColor; 
         }
     }
