--- a/src/Components/Products/products.scss
+++ b/src/Components/Products/products.scss
@@ -44,3 +44,10 @@
         }
     }
 }
+
+#cart-checkout-loading { 
+    display: flex;
+    justify-content: center;
+    color: white; 
+    width: 100%;
+}
