--- a/src/Components/Cart/cart.css
+++ b/src/Components/Cart/cart.css
@@ -6,14 +6,20 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
   height: 100vh;
+}
+
+#cart-checkout-container h1 {
+  color: white;
+  margin-bottom: 15px;
+  margin-top: 2rem;
 }
 
 #cart-checkout-container .cart-checkout-box {
@@ -75,8 +81,11 @@
 
 #cart-checkout-container .cart-checkout-box .cart-button {
   padding: 10px;
-  width: 150px;
+  width: 120px;
   font-weight: 600;
+  font-size: 15px;
+  color: black;
+  border-radius: 16px;
   border: none;
 }
 
@@ -95,6 +104,7 @@
 #cart-checkout-container .cart-checkout-box #cart-checkout-button {
   background-color: #7ed3e2;
   margin-left: 5px;
+  text-decoration: none;
 }
 
 #cart-checkout-container .cart-checkout-box #cart-checkout-button:hover {
