--- a/src/Components/Cart/cart.scss
+++ b/src/Components/Cart/cart.scss
@@ -3,10 +3,15 @@
 #cart-checkout-container { 
     display: flex; 
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100%; 
     height: 100vh; 
+    h1 { 
+        color: white; 
+        margin-bottom: 15px;
+        margin-top: 2rem;
+    }
 
     .cart-checkout-box { 
         display: flex;
@@ -44,8 +49,11 @@
         }
         .cart-button { 
             padding: 10px; 
-            width: 150px; 
+            width: 120px; 
             font-weight: 600;
+            font-size: 15px;
+            color: black;
+            border-radius: 16px;
             border: none; 
             &:hover { 
                 cursor: pointer;
@@ -60,6 +68,7 @@
         #cart-checkout-button { 
             background-color: $checkoutButtonColor;
             margin-left: 5px; 
+            text-decoration: none;
             &:hover { 
                 background-color: $checkoutButtonColorHover;
             }
