--- a/src/Components/CheckoutForm/CustomTextField/customTextField.css
+++ b/src/Components/CheckoutForm/CustomTextField/customTextField.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=customTextField.css.map */
+#checkout-text-field-label {
+  margin-right: 10px;
+}
+/*# sourceMappingURL=customTextField.css.map */
