--- a/src/Components/CheckoutForm/AddresForm/addressForm.css
+++ b/src/Components/CheckoutForm/AddresForm/addressForm.css
@@ -16,4 +16,38 @@
   height: 100%;
   color: white;
 }
-/*# sourceMappingURL=AddressForm.css.map */
+
+#address-form-container #checkout-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#address-form-container #select-field-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  margin-top: 10px;
+}
+
+#address-form-container #select-field-container .select-field {
+  width: 200px;
+  margin-right: 5px;
+  border: none;
+  background-color: #91d891;
+  padding: 5px;
+  font-weight: 600;
+}
+
+#address-form-container #select-field-container .select-field:hover {
+  cursor: pointer;
+}
+/*# sourceMappingURL=addressForm.css.map */
