--- a/src/Components/CheckoutForm/AddresForm/addressForm.css
+++ b/src/Components/CheckoutForm/AddresForm/addressForm.css
@@ -25,6 +25,13 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
 }
 
 #address-form-container #select-field-container {
