--- a/src/Components/CheckoutForm/Review/review.css
+++ b/src/Components/CheckoutForm/Review/review.css
@@ -12,6 +12,32 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
+}
+
+#order-summery-container h2 {
+  margin-bottom: 15px;
+}
+
+#order-summery-container .review-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 400px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#order-summery-container .review-item #review-item-name-quantity {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 250px;
 }
 /*# sourceMappingURL=review.css.map */
