--- a/src/_colorscheme.scss
+++ b/src/_colorscheme.scss
@@ -10,3 +10,6 @@ $checkoutButtonColorHover: rgb(175, 221, 230);
 
 $decrementButtonColor: rgb(240, 161, 161); 
 $incrementButtonColor: rgb(145, 216, 145); 
+
+$checkoutPayButtonColor: rgb(98, 185, 76); 
+$checkoutPayButtonColorHover: rgb(126, 223, 182); 
