--- a/src/Components/CheckoutForm/PaymentForm/paymentForm.css
+++ b/src/Components/CheckoutForm/PaymentForm/paymentForm.css
@@ -1,4 +1,61 @@
 #payment-form-container {
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-/*# sourceMappingURL=payment.css.map */
+
+#payment-form-container #paymentform-title-method {
+  margin-top: 2rem;
+}
+
+#payment-form-container #paymentform-stripe-payment {
+  background-color: white;
+  width: 300px;
+  margin-top: 10px;
+  padding: 15px;
+  border-radius: 16px;
+}
+
+.checkout-payment-button {
+  padding: 10px;
+  width: 120px;
+  font-weight: 600;
+  font-size: 15px;
+  color: black;
+  border-radius: 16px;
+  border: none;
+}
+
+.checkout-payment-button:hover {
+  cursor: pointer;
+}
+
+#back-button {
+  background-color: #ee965c;
+  margin-top: 15px;
+}
+
+#back-button:hover {
+  background-color: #f8dbb9;
+}
+
+#checkout-payment-submit-pay-button {
+  width: 100%;
+  background-color: #62b94c;
+}
+
+#checkout-payment-submit-pay-button:hover {
+  background-color: #7edfb6;
+}
+/*# sourceMappingURL=paymentForm.css.map */
