--- a/src/Components/Products/products.css
+++ b/src/Components/Products/products.css
@@ -9,9 +9,10 @@
   height: 100vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding-top: 120px;
 }
 
-#product-container #product-item {
+#product-container .product-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,7 +40,24 @@
           box-shadow: #a2a4a7 3px 3px 6px 0px inset, rgba(141, 138, 138, 0.5) -3px -3px 6px 1px inset;
 }
 
-#product-container #product-item img {
+@media (max-width: 650px) {
+  #product-container .product-item {
+    min-width: 250px;
+    max-width: 250px;
+    text-align: center;
+  }
+}
+
+#product-container .product-item .product-card-disabled {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(12, 13, 12, 0.8);
+  border-radius: 5%;
+  z-index: 5;
+}
+
+#product-container .product-item img {
   max-width: 80%;
   margin-bottom: 20px;
   border: 2px solid white;
@@ -47,18 +65,18 @@
           box-shadow: #929495 0px 20px 30px -10px;
 }
 
-#product-container #product-item h3 {
+#product-container .product-item h3 {
   font-size: 20px;
   margin-bottom: 10px;
 }
 
-#product-container #product-item #product-shopping-card-icon {
+#product-container .product-item .product-shopping-card-icon {
   position: absolute;
   right: 20px;
   bottom: 20px;
 }
 
-#product-container #product-item #product-shopping-card-icon:hover {
+#product-container .product-item .product-shopping-card-icon:hover {
   cursor: pointer;
   color: #93ec93;
   -webkit-transform: scale(1.1);
