--- a/src/_buttonStyles.scss
+++ b/src/_buttonStyles.scss
@@ -1,6 +1,21 @@
 @mixin basic-button { 
+    text-align: center;
     padding: 10px; 
     width: 120px; 
+    font-weight: 600;
+    font-size: 15px;
+    color: black;
+    border-radius: 16px;
+    border: none; 
+    &:hover { 
+        cursor: pointer;   
+    }
+}
+
+@mixin basic-mobile-button { 
+    text-align: center;
+    padding: 10px; 
+    width: 100%; 
     font-weight: 600;
     font-size: 15px;
     color: black;
