--- a/src/Components/Cart/CartItem/CartItem.scss
+++ b/src/Components/Cart/CartItem/CartItem.scss
@@ -1,4 +1,5 @@
 @import "../../../colorscheme"; 
+@import "../../../mediaQueries";
 
 #cart-item { 
     display: flex;
@@ -7,12 +8,24 @@
     width: 100%; 
     border-bottom: 1px solid white; 
     margin-bottom: 5px; 
+    @include for-custom-media(650px) { 
+        flex-direction: column;
+        align-items: center;
+    }
     #cart-item-info { 
         display: flex;
         align-items: flex-end;
+        @include for-custom-media(650px) { 
+            flex-direction: column;
+            align-items: center;
+        }
         #cart-item-quantity { 
             justify-content: center;
             align-items: center; 
+            @include for-custom-media(650px) { 
+                margin-top: 10px; 
+                margin-bottom: 10px; 
+            }
             button { 
                 margin-left: 5px; 
                 width: 25px;
@@ -55,6 +68,10 @@
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
+        @include for-custom-media(650px) { 
+            margin-top: 10px; 
+            margin-bottom: 10px; 
+        }
     }
     #cart-item-remove-item-button { 
         position: absolute; 
