--- a/src/Components/Cart/CartItem/cartItem.css
+++ b/src/Components/Cart/CartItem/cartItem.css
@@ -11,6 +11,18 @@
   margin-bottom: 5px;
 }
 
+@media (max-width: 650px) {
+  #cart-item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 #cart-item #cart-item-info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -20,6 +32,18 @@
           align-items: flex-end;
 }
 
+@media (max-width: 650px) {
+  #cart-item #cart-item-info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 #cart-item #cart-item-info #cart-item-quantity {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -27,6 +51,13 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media (max-width: 650px) {
+  #cart-item #cart-item-info #cart-item-quantity {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 #cart-item #cart-item-info #cart-item-quantity button {
@@ -76,6 +107,13 @@
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+}
+
+@media (max-width: 650px) {
+  #cart-item #cart-item-price {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 #cart-item #cart-item-remove-item-button {
