--- a/src/Components/Cart/cart.css
+++ b/src/Components/Cart/cart.css
@@ -14,12 +14,20 @@
           align-items: center;
   width: 100%;
   height: 100vh;
+  padding-top: 120px;
 }
 
 #cart-checkout-container h1 {
   color: white;
   margin-bottom: 15px;
   margin-top: 2rem;
+}
+
+@media (max-width: 650px) {
+  #cart-checkout-container h1 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
 }
 
 #cart-checkout-container .cart-checkout-box {
@@ -45,6 +53,12 @@
   background: linear-gradient(0deg, rgba(109, 117, 111, 0.8) 0%, #0c0d0c 20%, #171716 100%);
 }
 
+@media (max-width: 650px) {
+  #cart-checkout-container .cart-checkout-box {
+    width: 95%;
+  }
+}
+
 #cart-checkout-container .cart-checkout-box #cart-empty-back-link {
   width: 100%;
   text-align: center;
@@ -66,6 +80,21 @@
   margin: 20px;
 }
 
+@media (max-width: 650px) {
+  #cart-checkout-container .cart-checkout-box #cart-checkout-subtotal {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 #cart-checkout-container .cart-checkout-box #cart-checkout-subtotal #cart-checkout-subtotal-price {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -79,7 +108,34 @@
   margin-right: 15px;
 }
 
-#cart-checkout-container .cart-checkout-box .cart-button {
+@media (max-width: 650px) {
+  #cart-checkout-container .cart-checkout-box #cart-checkout-subtotal #cart-checkout-subtotal-price h3 {
+    margin-top: 10px;
+    text-align: center;
+  }
+}
+
+#cart-checkout-container .cart-checkout-box #cart-checkout-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 650px) {
+  #cart-checkout-container .cart-checkout-box #cart-checkout-buttons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+#cart-checkout-container .cart-checkout-box #cart-checkout-buttons .cart-button {
+  text-align: center;
   padding: 10px;
   width: 120px;
   font-weight: 600;
@@ -87,27 +143,35 @@
   color: black;
   border-radius: 16px;
   border: none;
+  margin-top: 5px;
 }
 
-#cart-checkout-container .cart-checkout-box .cart-button:hover {
+#cart-checkout-container .cart-checkout-box #cart-checkout-buttons .cart-button:hover {
   cursor: pointer;
 }
 
-#cart-checkout-container .cart-checkout-box #cart-empty-cart-button {
+@media (max-width: 650px) {
+  #cart-checkout-container .cart-checkout-box #cart-checkout-buttons .cart-button {
+    max-width: 250px;
+    width: 100%;
+  }
+}
+
+#cart-checkout-container .cart-checkout-box #cart-checkout-buttons #cart-empty-cart-button {
   background-color: #ee965c;
 }
 
-#cart-checkout-container .cart-checkout-box #cart-empty-cart-button:hover {
+#cart-checkout-container .cart-checkout-box #cart-checkout-buttons #cart-empty-cart-button:hover {
   background-color: #f8dbb9;
 }
 
-#cart-checkout-container .cart-checkout-box #cart-checkout-button {
+#cart-checkout-container .cart-checkout-box #cart-checkout-buttons #cart-checkout-button {
   background-color: #7ed3e2;
   margin-left: 5px;
   text-decoration: none;
 }
 
-#cart-checkout-container .cart-checkout-box #cart-checkout-button:hover {
+#cart-checkout-container .cart-checkout-box #cart-checkout-buttons #cart-checkout-button:hover {
   background-color: #afdde6;
 }
 /*# sourceMappingURL=cart.css.map */
