--- a/src/Components/CheckoutForm/AddresForm/addressForm.css
+++ b/src/Components/CheckoutForm/AddresForm/addressForm.css
@@ -45,13 +45,32 @@
   margin-top: 10px;
 }
 
+@media (max-width: 650px) {
+  #address-form-container #checkout-form #select-field-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 #address-form-container #checkout-form #select-field-container .select-field {
   width: 200px;
   margin-right: 5px;
   border: none;
   background-color: #91d891;
-  padding: 5px;
+  padding: 6px;
   font-weight: 600;
+}
+
+@media (max-width: 650px) {
+  #address-form-container #checkout-form #select-field-container .select-field {
+    margin-top: 5px;
+    width: 250px;
+  }
 }
 
 #address-form-container #checkout-form #select-field-container .select-field:hover {
@@ -63,18 +82,45 @@
   padding: 5px;
 }
 
+@media (max-width: 650px) {
+  #address-form-container #checkout-form #checkout-input-field {
+    width: 250px;
+    padding: 4px;
+  }
+}
+
 #address-form-container #checkout-form #checkout-input-field:focus {
   outline: none;
   border-color: #91d891;
 }
 
 #address-form-container #checkout-form #shipping-buttons-container {
-  margin-top: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 1rem;
+  width: 100%;
+}
+
+@media (max-width: 650px) {
+  #address-form-container #checkout-form #shipping-buttons-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 #address-form-container #checkout-form #shipping-buttons-container .cart-checkout-button {
   text-decoration: none;
   margin-right: 10px;
+  text-align: center;
   padding: 10px;
   width: 120px;
   font-weight: 600;
@@ -86,6 +132,23 @@
 
 #address-form-container #checkout-form #shipping-buttons-container .cart-checkout-button:hover {
   cursor: pointer;
+}
+
+@media (max-width: 650px) {
+  #address-form-container #checkout-form #shipping-buttons-container .cart-checkout-button {
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    font-weight: 600;
+    font-size: 15px;
+    color: black;
+    border-radius: 16px;
+    border: none;
+    margin-top: 5px;
+  }
+  #address-form-container #checkout-form #shipping-buttons-container .cart-checkout-button:hover {
+    cursor: pointer;
+  }
 }
 
 #address-form-container #checkout-form #shipping-buttons-container #cart-back-to-cart-button {
