--- a/src/Components/CheckoutForm/Checkout/checkout.css
+++ b/src/Components/CheckoutForm/Checkout/checkout.css
@@ -14,6 +14,7 @@
           align-items: center;
   width: 100%;
   height: 100vh;
+  padding-top: 100px;
 }
 
 #checkout-container h1 {
@@ -42,6 +43,13 @@
   background: linear-gradient(0deg, rgba(109, 117, 111, 0.8) 0%, #0c0d0c 20%, #171716 100%);
 }
 
+@media (max-width: 650px) {
+  #checkout-container #checkout-container-box {
+    width: 95%;
+    height: 80%;
+  }
+}
+
 #checkout-container #checkout-container-box #checkout-stepper-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -52,6 +60,12 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media (max-width: 650px) {
+  #checkout-container #checkout-container-box #checkout-stepper-container {
+    margin-bottom: 20px;
+  }
 }
 
 #checkout-container #checkout-container-box #checkout-stepper-container .checkout-stepper-line {
@@ -81,6 +95,13 @@
   min-width: 150px;
 }
 
+@media (max-width: 400px) {
+  #checkout-container #checkout-container-box #checkout-stepper-container .checkout-stepper-step-component {
+    min-width: 100px;
+    text-align: center;
+  }
+}
+
 #checkout-container #checkout-container-box #checkout-stepper-container .checkout-stepper-step-component .checkout-stepper-step-component-circle {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -98,6 +119,14 @@
   width: 45px;
   height: 45px;
   border-radius: 50%;
+}
+
+@media (max-width: 400px) {
+  #checkout-container #checkout-container-box #checkout-stepper-container .checkout-stepper-step-component .checkout-stepper-step-component-circle {
+    width: 25px;
+    height: 25px;
+    font-size: .8rem;
+  }
 }
 
 #checkout-container #checkout-container-box #checkout-stepper-container .checkout-stepper-step-component .checkout-stepper-active {
