--- a/src/Components/CheckoutForm/PaymentForm/paymentForm.scss
+++ b/src/Components/CheckoutForm/PaymentForm/paymentForm.scss
@@ -1,5 +1,6 @@
 @import "../../../buttonStyles"; 
 @import "../../../colorscheme"; 
+@import "../../../mediaQueries"; 
 
 #payment-form-container { 
     color: white; 
@@ -16,6 +17,9 @@
         margin-top: 10px; 
         padding: 15px; 
         border-radius: 16px;
+        @include for-custom-media(650px) { 
+            width: 100%; 
+        }
     }
 }
 
@@ -28,6 +32,9 @@
     margin-top: 15px;
     &:hover { 
         background-color: $emptyCartButtonColorHover; 
+    }
+    @include for-custom-media(650px) { 
+        width: 100%; 
     }
 }
 
