--- a/src/Components/CheckoutForm/Review/review.css
+++ b/src/Components/CheckoutForm/Review/review.css
@@ -31,6 +31,17 @@
           align-items: center;
 }
 
+@media (max-width: 650px) {
+  #order-summery-container .review-item {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 5px;
+  }
+}
+
 #order-summery-container .review-item #review-item-name-quantity {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -39,5 +50,15 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 250px;
+}
+
+#order-summery-container .review-item #review-item-price {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 /*# sourceMappingURL=review.css.map */
