--- a/src/Components/CheckoutForm/Review/review.scss
+++ b/src/Components/CheckoutForm/Review/review.scss
@@ -1,3 +1,5 @@
+@import "../../../mediaQueries"; 
+
 #order-summery-container {
     display: flex; 
     flex-direction: column;
@@ -11,10 +13,20 @@
         width: 400px; 
         justify-content: space-between; 
         align-items: center;
+        @include for-custom-media(650px) { 
+            width: 100%;  
+            flex-direction: column;
+            margin: 5px; 
+        }
         #review-item-name-quantity{ 
             display: flex;
             justify-content: space-between;
             width: 250px; 
+        }
+        #review-item-price { 
+            width: 100%; 
+            display: flex;
+            justify-content: flex-end;
         }
     }
 }
