--- a/src/Components/Navigation/navbar.css
+++ b/src/Components/Navigation/navbar.css
@@ -2,6 +2,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: fixed;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -15,6 +16,7 @@
   color: white;
   border-bottom: 3px solid white;
   margin-bottom: 10px;
+  z-index: 9;
 }
 
 #navbar-wrapper #navbar-home-container {
@@ -28,6 +30,12 @@
 
 #navbar-wrapper #navbar-home-container h1 {
   margin-left: 5px;
+}
+
+@media (max-width: 650px) {
+  #navbar-wrapper #navbar-home-container h1 {
+    font-size: 20px;
+  }
 }
 
 #navbar-wrapper #navbar-home-container:hover {
@@ -70,20 +78,107 @@
   transition: .4s ease-in-out;
 }
 
-#navbar-wrapper #navbar-link-container #navbar-checkout-cart {
-  margin: 10px;
+#navbar-wrapper .mobile-nav-links {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: black;
+  height: 220px;
+  top: 120px;
+  left: 0px;
+  width: 100%;
+  z-index: 10;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  background: #b8b4bb;
+  background: linear-gradient(173deg, #5a595a 0%, #262323 50%, #0e0d0d 100%);
+  -webkit-transition: -webkit-transform .4s ease;
+  transition: -webkit-transform .4s ease;
+  transition: transform .4s ease;
+  transition: transform .4s ease, -webkit-transform .4s ease;
 }
 
-#navbar-wrapper #navbar-link-container #navbar-checkout-cart:hover {
+#navbar-wrapper .mobile-nav-links a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+#navbar-wrapper .mobile-nav-links a:hover {
   color: #91d891;
   cursor: pointer;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  border-bottom: 2px solid #91d891;
   -webkit-transition: .4s ease-in-out;
   transition: .4s ease-in-out;
 }
 
-#navbar-wrapper #navbar-link-container #navbar-checkout-cart-amount-view {
+#navbar-wrapper .mobile-nav-links-hidden {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+}
+
+#navbar-wrapper .mobile-nav-links-show {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+#navbar-wrapper #mobile-nav-hambuger-button {
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
+  background-color: #91d891;
+  color: black;
+}
+
+#navbar-wrapper #mobile-nav-hambuger-button:hover {
+  cursor: pointer;
+  background-color: #a9d4a9;
+}
+
+#navbar-wrapper #hamburger-shoppingcart-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  padding-right: 10px;
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+#navbar-checkout-container {
+  position: relative;
+  margin-right: 10px;
+}
+
+#navbar-checkout-container #navbar-checkout-cart {
+  margin-right: 20px;
+  color: white;
+}
+
+#navbar-checkout-container #navbar-checkout-cart:hover {
+  color: #7ed3e2;
+  cursor: pointer;
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+}
+
+#navbar-checkout-container #navbar-checkout-cart-amount-view {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -96,8 +191,8 @@
           align-items: center;
   width: 25px;
   height: 25px;
-  right: -2px;
-  top: 2px;
+  top: -22px;
+  right: 8px;
   color: black;
   font-weight: 800;
   font-size: 14px;
