--- a/src/Components/Navigation/navbar.scss
+++ b/src/Components/Navigation/navbar.scss
@@ -1,7 +1,9 @@
 @import "../../colorscheme";
+@import "../../mediaQueries"; 
 
 #navbar-wrapper { 
     display: flex;
+    position: fixed; 
     align-items: center;
     justify-content: space-between;
     width: 100%; 
@@ -11,6 +13,7 @@
     color: white; 
     border-bottom: 3px solid white;
     margin-bottom: 10px;
+    z-index: 9;
     #navbar-home-container { 
         display: flex;
         margin-left: 15px; 
@@ -18,6 +21,9 @@
         text-decoration: none;
         h1 { 
             margin-left: 5px; 
+            @include for-custom-media(650px) {
+                font-size: 20px;
+            }
         }
         &:hover { 
             cursor: pointer;
@@ -47,29 +53,89 @@
                 transition: .4s ease-in-out; 
             }
         }
-        #navbar-checkout-cart { 
-            margin: 10px;
+    }
+    .mobile-nav-links { 
+        position: absolute; 
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        background-color: black;
+        height: 220px; 
+        top: 120px;
+        left: 0px;  
+        width: 100%;  
+        z-index: 10;  
+        border-top: 2px solid white; 
+        border-bottom: 2px solid white; 
+        background: rgb(184,180,187);
+        background: linear-gradient(173deg, rgb(90, 89, 90) 0%, rgba(38,35,35,1) 50%, rgb(14, 13, 13) 100%); 
+        transition: transform .4s ease;
+        a { 
+            color: white;
+            text-decoration: none;
+            font-size: 1.2rem; 
             &:hover { 
-                color: $accentColor;
+                color: $accentColor; 
                 cursor: pointer;
-                transform: scale(1.10); 
+                border-bottom: 2px solid $accentColor;
                 transition: .4s ease-in-out; 
             }
         }
-        #navbar-checkout-cart-amount-view { 
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center; 
-            width: 25px;
-            height: 25px; 
-            right: -2px;
-            top: 2px;
-            color: black; 
-            font-weight: 800;
-            font-size: 14px; 
-            border-radius: 50%; 
-            background-color: $accentColor; 
+    }
+    .mobile-nav-links-hidden { 
+        transform: translateX(0%);
+    }
+    .mobile-nav-links-show { 
+        transform: translateX(100%);
+    }
+    #mobile-nav-hambuger-button {
+        width: 35px; 
+        height: 35px; 
+        margin-right: 10px; 
+        background-color: $accentColor; 
+        color: black; 
+        &:hover { 
+            cursor: pointer;
+            background-color: rgb(169, 212, 169);
         }
     }
+    #hamburger-shoppingcart-wrapper { 
+        display: flex;
+        flex-direction: row-reverse;
+        padding-right: 10px; 
+        width: 100%; 
+        height: 100%; 
+        align-items: flex-end;
+    }
 }
+
+ #navbar-checkout-container {
+    position: relative;
+    margin-right: 10px; 
+    //Nav checkout cart styling 
+    #navbar-checkout-cart { 
+        margin-right: 20px;
+        color: white; 
+        &:hover { 
+            color: $checkoutButtonColor;
+            cursor: pointer;
+            transition: .4s ease-in-out; 
+        }
+    }
+    #navbar-checkout-cart-amount-view { 
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center; 
+        width: 25px;
+        height: 25px;
+        top: -22px; 
+        right: 8px; 
+        color: black; 
+        font-weight: 800;
+        font-size: 14px; 
+        border-radius: 50%; 
+        background-color: $accentColor; 
+    }    
+ }
