--- a/src/Components/Products/SearchBar/searchbar.css
+++ b/src/Components/Products/SearchBar/searchbar.css
@@ -7,4 +7,22 @@
   padding: 4px;
   margin-bottom: 30px;
 }
+
+@media (max-width: 450px) {
+  #search-input-label #search-input {
+    max-width: 200px;
+  }
+}
+
+@media (max-width: 450px) {
+  #search-input-label {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 /*# sourceMappingURL=searchbar.css.map */
