--- a/src/Components/Products/products.css
+++ b/src/Components/Products/products.css
@@ -20,7 +20,9 @@
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
+  padding-bottom: 20px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
@@ -54,8 +56,8 @@
 }
 
 #product-page-wrapper #product-container .product-item:hover {
-  -webkit-box-shadow: #8fe4a9 2px 4px 10px 3px, rgba(141, 138, 138, 0.5) 2px 4px 150px 1px inset;
-          box-shadow: #8fe4a9 2px 4px 10px 3px, rgba(141, 138, 138, 0.5) 2px 4px 150px 1px inset;
+  -webkit-box-shadow: #bcdfe2 2px 4px 10px 1px, rgba(141, 138, 138, 0.4) 2px 4px 150px 1px inset;
+          box-shadow: #bcdfe2 2px 4px 10px 1px, rgba(141, 138, 138, 0.4) 2px 4px 150px 1px inset;
 }
 
 @media (max-width: 650px) {
