--- a/src/Components/Products/products.scss
+++ b/src/Components/Products/products.scss
@@ -3,13 +3,15 @@
 #product-page-wrapper{ 
     display: flex;
     flex-direction: column;
-    padding-top: 120px; 
+    padding-top: 120px;  
     align-items: center;
     #product-container { 
         display: flex; 
         justify-content: center;
         width: 100%; 
-        height: 100vh; 
+        height: 100%; 
+        min-height: 100vh; 
+        padding-bottom: 20px; 
         flex-wrap: wrap;
         .product-item { 
             display: flex;
@@ -28,7 +30,7 @@
             color: white; 
             box-shadow: rgb(162, 164, 167) 3px 3px 6px 0px inset, rgba(141, 138, 138, 0.5) -3px -3px 6px 1px inset;
             &:hover { 
-                box-shadow: rgb(143, 228, 169) 2px 4px 10px 3px, rgba(141, 138, 138, 0.5) 2px 4px 150px 1px inset;
+                box-shadow: rgb(188, 223, 226) 2px 4px 10px 1px, rgba(141, 138, 138, 0.4) 2px 4px 150px 1px inset;
             }
             @include for-custom-media(650px) { 
                 min-width: 250px;  
